--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');*/
 
 * {
-    font-family: 'Roboto', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
+    font-family:'Courier New', Courier, monospace;
     margin: 0px;
 
 }
@@ -9,11 +10,13 @@
 
 
 .instructions {
-    padding-left: 8vw;
-    padding-right: 8vw;
+    margin:auto;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: left;
+    font-size: large;
+ 
+    background-color: rgba(40,40,40,0.4);
 }
 
 .images {
@@ -28,13 +31,13 @@
 }
 
 .gamepad {
+    margin:auto;
     max-width: 500px;
     display: flex;
     flex-wrap: wrap;
     padding: 4vw;
     gap: 5px;
     justify-content: center;
-    /*align-content: center;*/
 }
 
 .rock,
@@ -48,9 +51,20 @@ body {
     margin: auto;
     text-align: center;
     justify-content: center;
+    font-size: large;
+    background-image: url(images/bg.jpg);
+    color:burlywood;
+    
+    
 }
 .taunt {
     text-align: center;
     margin-top: 10px;
     font-weight: bold;
+}
+.scoreBoard {
+font-weight: 700;
+padding: 20px;
+background-color: burlywood;
+color:brown;
 }
