--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,12 @@
 .images {
     border-radius: 5px;
     height: 150px;
+    margin:4px;
 }
 .images:hover{
+    margin:0px;
     border: 4px solid;
-    opacity: 0.9;
+    opacity: 0.5;
     /*transform: scale(1.1);*/
    
 }
