--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 * {
     /*font-family: 'Roboto', sans-serif;*/
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0px;
 
 }
@@ -12,30 +12,30 @@
 }
 
 .instructions {
-    margin:auto;
+    margin: auto;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: left;
     font-size: large;
- 
-    background-color: rgba(40,40,40,0.4);
+    background-color: rgba(40, 40, 40, 0.4);
 }
 
 .images {
     border-radius: 5px;
     height: 150px;
-    margin:4px;
+    margin: 4px;
 }
-.images:hover{
-    margin:0px;
+
+.images:hover {
+    margin: 0px;
     border: 4px solid;
     opacity: 0.8;
     /*transform: scale(1.1);*/
-   
+
 }
 
 .gamepad {
-    margin:auto;
+    margin: auto;
     max-width: 500px;
     display: flex;
     flex-wrap: wrap;
@@ -43,6 +43,14 @@
     gap: 5px;
     justify-content: center;
 }
+
+.showChoices {
+    height: 24px;
+    margin: 15px;
+    background-color: rgba(40, 40, 40, 0.4);
+    font-size: large;
+}
+
 
 .rock,
 .scissors,
@@ -56,34 +64,53 @@ body {
     text-align: center;
     justify-content: center;
     font-size: large;
-    background-image: url(images/bg.jpg);
-    color:burlywood;
-    
-    
+    background-image: url(images/bg1.jpg);
+    color: burlywood;
+    background-color: black;
+
+
 }
+
 .taunt {
     text-align: center;
     margin-top: 10px;
     font-weight: bold;
 }
+
 .scoreBoard {
-font-weight: 700;
-padding: 20px;
-background-color: burlywood;
-color:brown;
-}
-.trophy {
-    padding:20px;
-}
-button {
-    
-    padding: 15px;
-    background-color: bisque;
+    font-weight: 700;
+    padding: 20px;
+    background-color: burlywood;
     color: brown;
+}
+
+.trophy {
+    padding: 15px;
+}
+
+.trophy>img {
+    height: 150px;
+}
+
+button {
+
+    padding: 15px;
+    background-color: brown;
+    color: bisque;
     font-weight: bold;
     box-shadow: none;
-    
+    border-radius: 4px;
+    border: 0;
+    margin: 4px;
+
 }
+
+button:hover {
+    margin: 0px;
+    border: 4px solid;
+    opacity: 0.9;
+}
+
 strong {
-    color:brown;
+    color: brown;
 }
