--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,110 @@
 /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');*/
 
 * {
-    /*font-family: 'Roboto', sans-serif;*/
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0px;
-
+  /*font-family: 'Roboto', sans-serif;*/
+  font-family: "Courier New", Courier, monospace;
+  margin: 0px;
 }
 
 .heading {
-    margin-top: 2vw;
+  margin-top: 2vw;
 }
 
 .instructions {
-    margin: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    text-align: left;
-    font-size: large;
-    background-color: rgba(40, 40, 40, 0.4);
+  margin: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: left;
+  font-size: large;
+  background-color: rgba(40, 40, 40, 0.4);
 }
 
 .images {
-    border-radius: 5px;
-    height: 150px;
-    margin: 4px;
+  border-radius: 5px;
+  height: 150px;
+  margin: 4px;
 }
 
 .images:hover {
-    margin: 0px;
-    border: 4px solid;
-    opacity: 0.8;
-    /*transform: scale(1.1);*/
-
+  margin: 0px;
+  border: 4px solid;
+  opacity: 0.8;
+  /*transform: scale(1.1);*/
 }
 
 .gamepad {
-    margin: auto;
-    max-width: 500px;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 4vw;
-    gap: 5px;
-    justify-content: center;
+  margin: auto;
+  max-width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 4vw;
+  gap: 5px;
+  justify-content: center;
 }
 
 .showChoices {
-    height: 24px;
-    margin: 15px;
-    background-color: rgba(40, 40, 40, 0.5);
-    font-size: large;
+  height: 24px;
+  margin: 15px;
+  background-color: rgba(40, 40, 40, 0.5);
+  font-size: large;
+  margin: 5px;
 }
-
 
 .rock,
 .scissors,
 .paper {
-    flex: 1;
+  flex: 1;
 }
 
 body {
-    max-width: 800px;
-    margin: auto;
-    text-align: center;
-    justify-content: center;
-    font-size: large;
-    background-image: url(images/bg1.jpg);
-    color: burlywood;
-    background-color: black;
-
-
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  font-size: large;
+  background-image: url(images/bg1.jpg);
+  color: burlywood;
+  background-color: black;
 }
 
 .taunt {
-    text-align: center;
-    margin-top: 10px;
-    font-weight: bold;
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .scoreBoard {
-    font-weight: 700;
-    padding: 20px;
-    background-color: burlywood;
-    color: brown;
+  font-weight: 700;
+  padding: 20px;
+  background-color: burlywood;
+  color: brown;
 }
 
 .trophy {
-    padding: 15px;
+  padding: 15px;
 }
 
-.trophy>img {
-    height: 150px;
+.trophy > img {
+  height: 150px;
 }
 
 button {
-
-    padding: 15px;
-    background-color: brown;
-    color: bisque;
-    font-weight: bold;
-    box-shadow: none;
-    border-radius: 4px;
-    border: 0;
-    margin: 4px;
-
+  padding: 15px;
+  background-color: brown;
+  color: bisque;
+  font-weight: bold;
+  box-shadow: none;
+  border-radius: 4px;
+  border: 0;
+  margin: 4px;
 }
 
 button:hover {
-    margin: 0px;
-    border: 4px solid;
-    opacity: 0.9;
+  margin: 0px;
+  border: 4px solid;
+  opacity: 0.9;
 }
 
 strong {
-    color: brown;
+  color: brown;
 }
