--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,19 @@
 
 .images:hover {
   transform: scale(1.05);
-  transition: 650ms ease;
+  transition: 300ms;
   margin: 0px;
   border: 4px solid;
   opacity: 0.8;
+}
+
+@keyframes my-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .gamepad {
@@ -42,6 +51,7 @@
   gap: 5px;
   justify-content: center;
   min-height: 165px;
+  animation: my-fade-in 4s ease-in;
 }
 
 .showChoices {
@@ -50,6 +60,15 @@
   background-color: rgba(40, 40, 40, 0.5);
   font-size: large;
   margin: 5px;
+  animation: my-fade-in 4s ease-in;
+}
+
+.scoreBoard {
+  font-weight: 700;
+  padding: 20px;
+  background-color: burlywood;
+  color: brown;
+  animation: my-fade-in 4s ease-in;
 }
 
 .rock,
@@ -73,13 +92,6 @@ body {
   text-align: center;
   margin-top: 10px;
   font-weight: bold;
-}
-
-.scoreBoard {
-  font-weight: 700;
-  padding: 20px;
-  background-color: burlywood;
-  color: brown;
 }
 
 .trophy {
